violating_resources/pod-security-policy/host-network-ports/samples/psp-host-network-ports/disallowed_ephemeral.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-host-networking-ports-disallowed
  name: nginx-host-networking-ports-disallowed
  labels:
    app: nginx-host-networking-ports
spec:
  hostNetwork: true
  ephemeralContainers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 9001
      hostPort: 9001
