violating_resources/pod-security-policy/host-network-ports/samples/psp-host-network-ports/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-host-networking-ports-allowed
  name: nginx-host-networking-ports-allowed
  labels:
    app: nginx-host-networking-ports
spec:
  hostNetwork: false
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 9000
      hostPort: 80
