violating_resources/pod-security-policy/host-network-ports/samples/psp-host-network-ports/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata: # kpt-merge: /nginx-host-networking-ports-disallowed
  name: psp-host-networking-ports-example-disallowed
  labels:
    app: nginx-host-networking-ports
spec:
  hostNetwork: true
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 9001
      hostPort: 9001
